# LlamaDebug

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: CompilerWarnings.cmake
include/LlamaDebug/: Debugger.h
include/LlamaDebug/Binary/: Binary.h  BinaryPE.h  BinaryPE64.h
include/LlamaDebug/Binary/Defs/: PE.h
include/llama_debug/: debugger.h  types.h
include/llama_debug/Binary/: Binary.h  binary_pe.h  binary_pe64.h  mmap_file.h
include/llama_debug/Binary/Defs/: PE.h
include/llama_debug/Binary/pe/: binary_pe.h  binary_pe64.h  defs.h  dos_header.h  file_header.h  optional_header.h  section_header.h
include/llama_debug/binary/: binary.h  mmap_file.h  parser.h  section.h  symbol.h  types.h
include/llama_debug/binary/pe/: binary_pe.h  defs.h  dos_header.h  file_header.h  import_directory.h  import_entry.h  optional_header.h  pe_binary.h  pe_dos_header.h  pe_export_directory.h  pe_export_entry.h  pe_file_header.h  pe_import_directory.h  pe_import_entry.h  pe_optional_header.h  pe_parser.h  pe_process_parser.h  pe_resource_data_entry.h  pe_resource_directory.h  pe_resource_directory_entry.h  pe_section_header.h  section_header.h  types.h
include/llama_debug/process/: memory.h  pipe.h  process.h  types.h
include/llama_debug/process/platform/windows/: win_exception.h  win_pipe.h  win_process.h
samples/: CMakeLists.txt
sandbox/: CMakeLists.txt  bin_test.cpp  proc_test.cpp
sandbox/python/: debugger.py
src/: Bindings.cpp  CMakeLists.txt  DebuggerWin.cpp  debugger_win.cpp  main.cpp  py_bindings.cpp
src/Binary/: Binary.cpp  BinaryPE.cpp  BinaryPE64.cpp  binary_pe.cpp  binary_pe64.cpp  mmap_file.cpp
src/Binary/pe/: binary_pe.cpp  binary_pe64.cpp  dos_header.cpp  file_header.cpp  section_header.cpp
src/binary/: binary.cpp  mmap_file.cpp  parser.cpp  section.cpp  symbol.cpp
src/binary/pe/: binary_pe.cpp  defs.cpp  dos_header.cpp  file_header.cpp  import_directory.cpp  import_entry.cpp  optional_header.cpp  pe_binary.cpp  pe_dos_header.cpp  pe_export_directory.cpp  pe_export_entry.cpp  pe_file_header.cpp  pe_import_directory.cpp  pe_import_entry.cpp  pe_optional_header.cpp  pe_parser.cpp  pe_process_parser.cpp  pe_resource_data_entry.cpp  pe_resource_directory.cpp  pe_resource_directory_entry.cpp  pe_section_header.cpp  section_header.cpp
src/process/: pipe.cpp  process.cpp
src/process/platform/windows/: win_exception.cpp  win_pipe.cpp  win_process.cpp
test/: debugger.py
